# docparse

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
sphinx/source/: conf.py  index.rst
sphinx/source/redocparse/: files.rst  logs.rst  matcher.rst
src/discord/: api.py  parse_discord.py
src/docparse/: matcher.py
src/redocparse/: __init__.py  matcher.py
