[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "docparse"
authors = [
    {name = "lapras"},
]
description = "An ergonomic way to use regex recursively."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["docparse", "documentation", "regex", "recursive regex"]

dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["docparse"]

[tool.setuptools_scm]
local_scheme = "no-local-version"